# cfn101-workshop

./: .bumpversion.cfg  .cfnlintrc  .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  amplify.yml  config.toml  contentspec.yaml  pyproject.toml  requirements.txt  review_for_guard_hook.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: unit-tests.yaml
code/10-cloudformation-fundamentals/: 01-lab01-StackExample.yaml  02-lab01-StackExample-Solution.yaml
code/20-cloudformation-features/: 01-lab02-Resources.yaml  02-lab02-Resources-Solution.yaml  03-lab03-IntrinsicFunctions.yaml  04-lab03-IntrinsicFunctions-Solution.yaml  05-lab04-Mapping-Solution.yaml  05-lab04-Mapping.yaml  06-lab04-Mapping-Solution.yaml  07-lab05-Outputs.yaml  08-lab05-Outputs-Solution.yaml
code/30-cloudformation-fundamentals/: 02-lab01-StackExample-Solution.yaml
code/30-cloudformation-fundementals/: 01-TemplateExample.yaml  01-lab01-StackExample.yaml
code/30-launching-ec2/: 01-lab06-SSM.yaml  02-lab06-SSM-Solution.yaml  03-lab07-SSM-SM.yaml  04-lab07-SSM-SM-Solution.yaml  05-lab08-UserData.yaml  06-lab08-UserData-Solution.yaml  07-lab09-HelperScripts.yaml  08-lab09-HelperScripts-Solution.yaml
code/40-cloudformation-features/: 01-lab02-Resources.yaml  02-lab02-Resources-Solution.yaml  03-lab03-IntrinsicFunctions.yaml  (+6 more)
content/: _index.md  index.ja.md  index.md
docs/: LOCAL_DEVELOPMENT.md
infrastructure/: .env.example  amplify.template  buildspec.yaml  buildspec.yml  deploy.sh
workshop/: config.toml
(+505 files in other folders)
